Fix a couple things

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ git:
 install:
   - make install
 
-go_import_path: github.com/gin-gonic/gin
+go_import_path: github.com/wearkinetic/gin
 
 script:
   - make vet
